applications/wordpress-dev/wordpress-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-wp-dev
  namespace: wordpress-dev
  labels:
    app: wordpress-wp-dev
spec:
  ports:
    - port: 8091
      targetPort: 80
  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
  externalIPs:
    - 10.192.168.202
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress-dev
  labels:
    app: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress:latest
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
        resources:
          requests:
            memory: "32Mi"
            cpu: "200m"
          limits:
            memory: "1024Mi"
        imagePullPolicy: Always
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-dev-01-pv-claim
