applications/wordpress-dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-wordpress-dev
  namespace: wordpress-dev
spec:
  hostnames:
    - wordpress-salaserver.linuxadmin.eu
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway-https
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: wordpress-wp-dev
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
