applications/wordpress-dev/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-policy
  namespace: wordpress-dev
  #connection to mysql allowed only from wordpress pods in current namespace
spec:
  podSelector:
    matchLabels:
      tier: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
        namespaceSelector:
          matchLabels:
            name: wordpress-dev
      ports:
        - protocol: TCP
          port: 3306
---
# egress:
# - Internet allowed
# - block communication to other services in k8s
# - allow communication to mysql service
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-egress-external
  namespace: wordpress-dev
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        # Exclude traffic to Kubernetes service IPs and pods
        except:
          - 10.0.0.0/8
          - 172.16.0.0/12
          - 192.168.0.0/16
  - to:
    - podSelector:
        matchLabels:
          app: mysql-wp-dev
      namespaceSelector:
        matchLabels:
            name: wordpress-dev
